syntax = "proto3";

package calculator;

option go_package="calculator/proto";

message SumRequest {
  int64 num1 = 1;
  int64 num2 = 2;
}

message SumResponse {
  int64 result = 1;
}

message SubRequest {
  int64 num1 = 1;
  int64 num2 = 2;
}

message SubResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc Sub(SubRequest) returns (SubResponse) {};
}
